--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,4 @@
-<ol class="post-list">
+<ul class="post-list">
   {{#each posts as |post|}}
   <li>
     <article class="post">
@@ -12,4 +12,4 @@
     </article>
   </li>
   {{/each}}
-</ol>
+</ul>
