--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,13 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tech Blog</title>
+    <title>Tech Blog</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
 <body>
   <div class="wrapper">
     <header>
+     <nav>
+  <button id="logout" class="btn-no-style">logout</button>
+  <a href="/login">login</a>
+</nav>
       <h1>
         <a href="/">Tech Blog</a>
       </h1>
