--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,10 +11,14 @@
 <body>
   <div class="wrapper">
     <header>
-     <nav>
-  <button id="logout" class="btn-no-style">logout</button>
-  <a href="/login">login</a>
-</nav>
+      <nav>
+        {{#if loggedIn}}
+        <a href="/dashboard">dashboard</a>
+        <button id="logout" class="btn-no-style">logout</button>
+        {{else}}
+        <a href="/login">login</a>
+        {{/if}}
+      </nav>
       <h1>
         <a href="/">Tech Blog</a>
       </h1>
@@ -26,6 +30,10 @@
       Thanks for visiting!
     </footer>
   </div>
+
+    {{#if loggedIn}}
+  <script src="/javascript/logout.js"></script>
+  {{/if}}
 
 </body>
 
