--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,6 @@
 <form class="login-form">
-  <div>
+  <div class="login-forms">
+      <h4>Login</h4>
     <label for="email-login">email:</label>
     <input type="text" id="email-login" />
   </div>
@@ -13,7 +14,8 @@
 </form>
 
 <form class="signup-form">
-  <div>
+  <div class="login-forms">
+      <h4>Sign Up</h4>
     <label for="username-signup">username:</label>
     <input type="text" id="username-signup" />
   </div>
