--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -7,8 +7,8 @@
       <input type="text" id="post-title" name="post-title" />
     </div>
     <div>
-      <label for="post-url">Post</label>
-      <input type="text" id="post-url" name="post-url" />
+      <label for="post-content">Post</label>
+      <input type="text" id="post-content" name="post-content" />
     </div>
     <button type="submit" class="btn">Create</button>
   </form>
