--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,21 +13,26 @@
     <header>
       <nav>
         {{#if loggedIn}}
-        <a href="/dashboard">dashboard</a>
+        <a href="/">Home</a>
+        <a href="/dashboard">Dashboard</a>
         <button id="logout" class="btn-no-style">logout</button>
         {{else}}
-        <a href="/login">login</a>
+        <a href="/">Home</a>
+        <a href="/login">Login</a>
         {{/if}}
       </nav>
       <h1>
         <a href="/">Tech Blog</a>
       </h1>
     </header>
+
     <main>
       {{{ body }}}
     </main>
+
     <footer>
     </footer>
+    
   </div>
 
     {{#if loggedIn}}
