--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,7 +1,10 @@
 <article class="post">
   <div class="title">
     <a href="{{post_content}}" target="_blank">{{title}}</a>
-    <span>({{ post_content}})</span>
+    <span>{{user.username}}</span>
+    </div>
+<div>
+    <p>({{ post_content}})</p>
   </div>
   <div class="meta">
     <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
