--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,6 +15,7 @@
         {{#if loggedIn}}
         <a href="/">Home</a>
         <a href="/dashboard">Dashboard</a>
+        <a href="/dashboard/create/">Add A Post</a>
         <button id="logout" class="btn-no-style">logout</button>
         {{else}}
         <a href="/">Home</a>
@@ -32,7 +33,7 @@
 
     <footer>
     </footer>
-    
+
   </div>
 
     {{#if loggedIn}}
