--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,9 +2,7 @@
   {{#each posts as |post|}}
   <li>
     <article class="post">
-      <div class="title">
-        {{post.title}}
-        <br>
+      <div>
       {{> post-info post}}
       </div>
     </article>
