--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,12 +13,12 @@
     <header>
       <nav>
         {{#if loggedIn}}
-        <a href="/">Home</a>
-        <a href="/dashboard">Dashboard</a>
-        <a href="/dashboard/create/">Add A Post</a>
+        <a href="/">Home</a> | 
+        <a href="/dashboard">Dashboard</a> | 
+        <a href="/dashboard/create/">Add A Post</a> | 
         <button id="logout" class="btn-no-style">logout</button>
         {{else}}
-        <a href="/">Home</a>
+        <a href="/">Home</a> | 
         <a href="/login">Login</a>
         {{/if}}
       </nav>
