--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -7,6 +7,10 @@
     <div>
       <input name="post-title" type="text" value="{{post.title}}" />
     </div>
+        <div>
+        <label for="post-content">post content:</label>
+      <input class="textarea" name="post-content" type="text" value="{{post.post_content}}" />
+    </div>
     <div>
       <a href="/post/{{post.id}}">{{post.comments.length}} {{format_plural "comment" post.comments.length}}</a>
     </div>
