--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,10 +1,10 @@
 <article class="post">
   <div class="title">
-    <a href="{{post_content}}" target="_blank">{{title}}</a>
+    <a href="/post/{{id}}" target="_blank">{{title}}</a>
     <span>{{user.username}}</span>
     </div>
 <div>
-    <p>({{ post_content}})</p>
+    <p>{{ post_content}}</p>
   </div>
   <div class="meta">
     <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
