--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,13 +12,12 @@
   <div class="wrapper">
     <header>
       <nav>
-        {{#if loggedIn}}
         <a href="/">Home</a> | 
         <a href="/dashboard">Dashboard</a> | 
-        <a href="/dashboard/create/">Add A Post</a> | 
-        <button id="logout" class="btn-no-style">logout</button>
+        <a href="/dashboard/create/">Add A Post</a> |
+        {{#if loggedIn}}
+        <button id="logout" class="btn-no-style">Logout</button>
         {{else}}
-        <a href="/">Home</a> | 
         <a href="/login">Login</a>
         {{/if}}
       </nav>
