--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,6 +1,6 @@
 <article class="post">
   <div class="title">
-    <a href="/post/{{id}}" target="_blank">{{title}}</a>
+    <a href="/post/{{id}}">{{title}}</a>
     <span>{{user.username}}</span>
     </div>
 <div>
