add post from dashboard page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
       <nav>
         <a href="/">Home</a> | 
         <a href="/dashboard">Dashboard</a> | 
-        <a href="/dashboard/create/">Add A Post</a> |
+        {{!-- <a href="/dashboard/create/">Add A Post</a> | --}}
         {{#if loggedIn}}
         <button id="logout" class="btn-no-style">Logout</button>
         {{else}}
